--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,20 +10,40 @@
   <div class="container">
     <mat-card>
         <mat-card-content>
+          <h1 style="text-align: center;">Laura Lizarazo</h1>
           <p>
-            My Name: Laura Lizarazo <br><br>
-
-            Image: [Insert head and shoulders photograph here]<br><br>
+           <img src="../assets/img/laura.png" alt="Logo" class="menu-logo"><br><br>
             
             I am a dedicated and experienced software engineer with a passion for creating innovative solutions. With a strong background in developing applications using C#, .NET, and SQL, I bring a wealth of technical knowledge and expertise to every project. Throughout my career, I have successfully implemented web-based applications, integrated systems through APIs, and designed reports using tools like Power BI and Reporting Services.<br><br>
             
-            I thrive in collaborative environments and enjoy working with cross-functional teams to deliver high-quality solutions. I am committed to continuous learning and staying updated with the latest industry trends to ensure that I am equipped with the most relevant skills and knowledge. With a strong work ethic, attention to detail, and effective problem-solving abilities, I consistently deliver results that exceed expectations.<br><br>
-            
-            I believe in the power of effective communication and building strong relationships with clients, colleagues, and stakeholders. I am dedicated to providing exceptional support and creating value through software engineering. As I continue to grow and evolve in my career, I am always seeking new opportunities to contribute my skills and expertise to make a positive impact.<br><br>
+            I thrive in collaborative environments and enjoy working with cross-functional teams to deliver high-quality solutions. I am committed to continuous learning and staying updated with the latest industry trends to ensure that I am equipped with the most relevant skills and knowledge.I believe in the power of effective communication and building strong relationships with clients, colleagues, and stakeholders.<br><br>
             
             Thank you for taking the time to learn more about me. I look forward to connecting and exploring potential collaboration opportunities.<br><br>
           </p>
          
+
+          <mat-chip-listbox aria-label="Dog selection">
+            <mat-chip>
+              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+             C#
+            </mat-chip>
+            <mat-chip color="primary">
+              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+             SQL
+            </mat-chip>
+            <mat-chip color="accent">
+              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+             JavaScript
+            </mat-chip>
+            <mat-chip color="accent">
+              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+             .NET
+            </mat-chip>
+            <mat-chip color="accent">
+              <img matChipAvatar src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Photo of a Shiba Inu"/>
+             SSRS
+            </mat-chip>
+          </mat-chip-listbox>
         </mat-card-content>
       </mat-card>
   </div>
