--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,4 +1,19 @@
+ /* 
+ Student name: Laura Lizarazo
+ Student number: 301238622
+ Date: 6/04/2023
+ */
+
+
 .container {
     margin: 2%;
+  }
+.menu-logo {
+    width:17%;
+    border-radius: 50%;
+    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   
