--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,5 +1,13 @@
 
+ /* 
+ Student name: Laura Lizarazo
+ Student number: 301238622
+ Date: 6/04/2023
+ */
 .container {
     margin: 2%;
   }
-  
+
+  .mat-mdc-form-field {
+    width: 100%;
+}
