--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -41,7 +41,7 @@
                   <ul>
                     <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 27</li>
                     <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Specialization</li>
-                    <li><i class="bi bi-rounded-right"></i> <strong>PhEmailone:</strong> laura.lizarazo20@gmail.com</li>
+                    <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> laura.lizarazo20@gmail.com</li>
                     <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                   </ul>
                 </mat-grid-tile>
