--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,10 +17,8 @@
     </nav><!-- .navbar -->
 
     <div class="header-social-links">
-      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <mat-icon>location_on</mat-icon>
+      <mat-icon>recommend</mat-icon>
     </div>
 
   </div>
@@ -28,7 +26,7 @@
 </header>
 
 <main id="main">
-  sdfsdf
+ <br><br><br>
   <router-outlet></router-outlet>
 </main>
 
