--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -6,14 +6,13 @@
 
 
 .container {
-    margin: 2%;
-    margin: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-right: 10% !important;
+ 
   }
+
+
 .menu-logo {
-    width:80%;
+    width:100%;
     border-radius: 50%;
     margin: auto;
     display: block;
