--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -193,6 +193,20 @@
   }
 }
 
+.navbar>.container,
+.navbar>.container-fluid,
+.navbar>.container-lg,
+.navbar>.container-md,
+.navbar>.container-sm,
+.navbar>.container-xl,
+.navbar>.container-xxl {
+    display: flex;
+    flex-wrap: inherit;
+    align-items: center;
+    justify-content: space-between
+}
+
+
 
 section {
   padding: 60px 0;
