--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -34,84 +34,15 @@ h6 {
 }
 
 #main {
-  margin-top: 50px;
+  margin-top: 15px;
 }
 
 @media (max-width: 992px) {
   #main {
-    margin-top: 30px;
+    margin-top: 15px;
   }
 }
 
-/*--------------------------------------------------------------
-# Preloader
---------------------------------------------------------------*/
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
-  overflow: hidden;
-  background: #fff;
-}
-
-#preloader:before {
-  content: "";
-  position: fixed;
-  top: calc(50% - 30px);
-  left: calc(50% - 30px);
-  border: 6px solid #34b7a7;
-  border-top-color: #dcf5f2;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  animation: animate-preloader 1s linear infinite;
-}
-
-@keyframes animate-preloader {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-/*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
-.back-to-top {
-  position: fixed;
-  visibility: hidden;
-  opacity: 0;
-  right: 15px;
-  bottom: 15px;
-  z-index: 996;
-  background: #34b7a7;
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  transition: all 0.4s;
-}
-
-.back-to-top i {
-  font-size: 24px;
-  color: #fff;
-  line-height: 0;
-}
-
-.back-to-top:hover {
-  background: #49cbbb;
-  color: #fff;
-}
-
-.back-to-top.active {
-  visibility: visible;
-  opacity: 1;
-}
 
 /*--------------------------------------------------------------
 # Header
@@ -167,6 +98,12 @@ h6 {
   color: #34b7a7;
 }
 
+.me-auto {
+  margin-right: auto !important
+}
+.me-lg-0 {
+  margin-right: 0 !important
+}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -253,7 +190,7 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 20px 0;
 }
 
 .section-bg {
@@ -289,3 +226,15 @@ section {
   margin-bottom: 0;
 }
 
+
+.d-flex {
+  display: flex !important
+}
+
+.justify-content-between {
+  justify-content: space-between !important
+}
+
+.align-items-center {
+  align-items: center !important
+}
